--- a/app/src/main/res/layout/activity_irregularidade.xml
+++ b/app/src/main/res/layout/activity_irregularidade.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ffundo"
-    tools:context=".irregularidade">
+    tools:context=".Irregularidade">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/homeButton"
