--- a/app/src/main/res/layout/activity_irregularidade.xml
+++ b/app/src/main/res/layout/activity_irregularidade.xml
@@ -16,7 +16,8 @@
         android:layout_height="30dp"
         android:layout_gravity="end"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"/>
+        android:layout_marginEnd="10dp"
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/IrregularBackBtn"
